src/style.css
@font-face {
    font-family: 'Roboto';
    src: url('./assets/Roboto-Black.woff') format('woff'),
        url('./assets/Roboto-Black.woff2') format('woff2');
    font-weight: 900;
    font-style: normal;
}

@font-face {
    font-family: 'Roboto';
    src: url('./assets/Roboto-Regular.woff') format('woff'),
        url('./assets/Roboto-Regular.woff2') format('woff2');
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: 'Roboto';
    src: url('./assets/Roboto-Medium.woff') format('woff'),
        url('./assets/Roboto-Medium.woff2') format('woff2');
    font-weight: 500;
    font-style: normal;
}

@font-face {
    font-family: 'Roboto';
    src: url('./assets/Roboto-Bold.woff') format('woff'),
        url('./assets/Roboto-Bold.woff2') format('woff2');
    font-weight: 700;
    font-style: normal;
}

body {
    overflow: hidden;
    font-family: 'Roboto';
    color: black;
    padding: 0;
    margin: 0;
}

#search-bar {
    position: sticky;
    overflow: hidden;
    top: 0;
    height: 38px;
    width: 100%;
    background-color: #9B7EDE;
    z-index: 10;

    display: flex;
    justify-content: space-between; 

}

.searchbar-middle {
    display: flex;
    justify-content: center;
    width: min-content;
}

#search-icon {
    height: 30px;
    width: 30px;
    align-self: center;
}

.searchbar-logo {
    color: white;
    margin: 0;
    margin-left: 10px;
    align-self: center;
    user-select: none;
}

#search {
    color: white;
    background: none;
    border: 0;
    outline: 0;
}

#menu-icon {
    width: 30px;
    height: 30px;
    margin-right: 10px;
    align-self: center;
}

#main-content {
    display: flex;
}

#side-bar {
    overflow: hidden;
    z-index: 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    height: 85vh;
    width: 200px;
    gap: 14px;
    margin-top: 0px;
    margin-left: 50px;
}

#side-bar-projects {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    height: 85vh;
    width: 200px;
    gap: 14px;
    padding-left: 0;
    user-select: none;
}

.sidebar-link {
    cursor: pointer;
    user-select: none;
}

.sidebar-link:hover {
    color: rgba(0,0,0,0.8);
}


.logo {
    font-size: 36px;
    user-select: none;
    margin-top: 20px;
    margin-bottom: 80px;
}

.logo-right {
    color: #FF686B;
}

.project {
    list-style: none;
    font-size: 24px;
}

.headline {
    font-weight: bold;
}

#list-container {
    overflow-x: hidden;
    overflow-y: scroll;
    z-index: 5;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    height: 85vh; 
    
    padding: 100px;
    padding-top: 40px;
    box-shadow: -2px 0px 1px rgba(0,0,0,0.1);
    width: 100%;
}

.left-container {
    display: flex;
    align-items: center;
}

.todo-list-item {
    padding: 20px;
    border-bottom: 1px solid rgba(0,0,0,0.1);
    width: 100%;
    
    display: grid;
    grid-template-columns: 6fr 5fr 1fr;
    justify-content: space-between;
}

.todo-list-item:hover {
    background-color: rgba(0,0,0,0.01);
}

[contenteditable="true"]:active,
[contenteditable="true"]:focus {
    border: none;
    outline: none;
}

.todo-list-text:hover {
    color: rgba(0,0,0,0.6);
}

.todo-list-text {
    padding: 6px;
    background-color: transparent;
}

.crossed-out {
    text-decoration: line-through;
}

.todo-description {
    grid-row-start: 2;
    grid-row-end: 4;
    padding: 10px;

    font-family: inherit;
    font-size: 14px;

    border: 0;
    border-radius: 5px;
    outline: none;
    resize: none;
}

.priority-select {
    border: 0;
    background-color: transparent;
    font-family: inherit;
    font-size: inherit;
}

.todo-delete {
    background-color: #FF686B;
    color: white;
    border: 0;
    border-radius: 50%;
    width: 40px;
    height: 40px;
    grid-row-start: 3;
    grid-row-end: 4;
    grid-column-start: 3;
    grid-column-end: 4;
    justify-self: end;
}

.expanded {
    grid-template-rows: 1fr 1fr 1fr;
}

.todo-check {
    appearance: none;
    -webkit-appearance: none;
    width: 25px;
    height: 25px;
    border-radius: 50%;
    cursor: pointer;
    border: 1px black solid;
    margin-right: 14px;
}

.todo-check:checked {
    background-color: black;
}

.lvl1 {
    border-color: #FF686B;
}

.lvl1:checked {
    background-color: #FF686B;
}

.lvl2 {
    border-color: rgb(221, 221, 117);
}

.lvl2:checked {
    background-color: rgb(221, 221, 117);
}

.lvl3 {
    border-color: rgb(124, 236, 124);
}

.lvl3:checked {
    background-color: rgb(124, 236, 124);
}

.todo-title {
    border: 0;
    font-family: inherit;
    font-size: 16px;
    width: fit-content;
}

.todo-duedate {
    background-color: transparent;
    border: 0;
    font-family: inherit;
    font-size: inherit;
    font-weight: inherit;
    width: max-content;
}

.todo-project {
    border: 0;
    font-family: inherit;
    font-size: inherit;
    text-align: right;
}

.todo-right {
    margin-right: 50px;
}


.list-legend {
    display: grid;
    grid-template-columns: 6fr 5fr 1fr;
    width: 100%;
}

.title {
    padding: 20px;
    user-select: none;
}

.empty {
    min-height: 300px;
    width: 100%;
}

